--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
+:root{
+    --cor-principal:#000000;
+    --cor-secundaria:#f6f6f6;
+    --cor-terciaria :#22D4FD;
+    --cor-houver:#272727;
+    --cor-fundo:#24193b;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria:'Montserrat', sans-serif;
+   
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -5,9 +19,28 @@
 body{
 height :100vh;
     box-sizing: border-box;
-    background-color:#24193b; 
-    color :#F6F6F6; 
+    background-color:var(--cor-fundo); 
+    color :var(--cor-secundaria); 
 }
+.apresentacao {
+    padding: 5% 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 50px;
+}
+.apresentacao__conteudo{
+    display: flex;
+    width: 50%;
+    flex-direction:column;
+    gap:40px;
+}
+.apresentacao__conteudo__titulo{
+    font-size: 2.25rem;
+    font-family: var(--fonte-primaria);
+
+}
+
 .cabecalho{
     padding:5% 0 0 10%;
 }
@@ -16,25 +49,28 @@ height :100vh;
     gap:80px;
 }
 .cabecalho__menu__link{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
+    font-family: var(--fonte-secundaria);
+    font-size: 1.5rem;
     font-weight: 600;
-    color:#22D4FD;
+    color:var(--cor-terciaria);
     text-decoration: none;
 }
 .foto{
- display:flex;
- height: 50%;
- width: 30%;
+ width: 50%;
  border-radius: 100px;
+}
+.foto1{
+    width: 30%;
+    border-radius: 100%;
+
 }
 .apresentacao2{
     display: flex;
     width: 615px;
     text-align: center;
     gap:40px;
-    font-size: 30px;
-    font-family: 'Krona One', sans-serif;
+    font-size: 1.8rem;
+    font-family: var(--fonte-primaria);
 
     padding: 5% 40% 0 25%;
 }
@@ -43,26 +79,29 @@ height :100vh;
     width: 615px;
     padding:2% 20% 0 20%;
     font-size: 35px;
-    color:#22D4FD;
+    color:var(--cor-terciaria);
 
 }
 .curriculo{
-    padding: 3% 30% 0% 25%;
-    font-size: 25px;
+    font-family: var(--fonte-secundaria);
+    padding:10% 0% 0% 25%;
+    font-size: 1.2rem;
   
 }
 .referencias{
-    padding: 3% 30% 0% 25%;
-    font-size: 25px;
+    font-family: var(--fonte-secundaria);
+    padding: 10% 0% 0% 25%;
+    font-size: 1.4rem;
   
 }
 .referencias2{
-    padding: 3% 30% 5% 25%;
-    font-size: 25px;
+    font-family: var(--fonte-secundaria);
+    padding:10% 0% 0% 25%;
+    font-size: 1.4rem;
   
 }
 .titulo {
-    color :#22D4FD
+    color :var(--cor-terciaria);
     
 }
 .apresentacao {
@@ -79,13 +118,13 @@ height :100vh;
     gap:40px;
 }
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-size: 1.87rem;
+    font-family: var(--fonte-primaria);
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-family: var(--fonte-secundaria);
 }
 .apresentacao__links{
     display:flex;
@@ -96,21 +135,21 @@ height :100vh;
 
 }
 .apresentacao__links__subtitulo{
-    font-family: 'Krona One', sans-serif;
+    font-family:var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 
 }
 .apresentacao__links__link {
    border :2px solid #1d97bf;
-    width: 300px;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 24px;
-    font-weight: 600;
-    padding: 15px 0 ;
-    text-decoration: none;
-    color: white;
+   width: 50%;
+   text-align: center;
+   border-radius: 8px;
+   font-size: 1.5rem;
+   font-weight: 600;
+   padding: 21.5px 0;
+   text-decoration: none;
+   color: var(--cor-secundaria);
    
    
 }
@@ -118,12 +157,30 @@ height :100vh;
     background-color: #272727;
 }
 .rodape{
-    color:#000000;
-    background-color: #22D4FD;
+    color:var(--cor-principal);
+    background-color: var(--cor-terciaria);
     padding:20px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
+    font-family: var(--fonte-secundaria);
+    font-size: 1.5rem;
+
+
 
 }
+@media(max-width:1200px){
+  body{
+    background-color: var(--cor-principal);
+  }
 
+    .cabecalho{
+        padding:10%;
+        
+    }
+    .cabecalho__menu{
+        justify-content:center;
+    }
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+    
+}
